--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header class="bbva" >
+      <img src="./img/logo_bbva_blanco.svg" alt="bbva" >
+    </header>
+    <main class="show">
+      <!-- Input -->
+      <section id="container" >
+        <br>
+        <h1>Valida tu tarjeta</h1>
+        <input type="text" id="numero" maxlength="16" placeholder="Número de Tarjeta">
+        <p id="textoAlert" class="ocultar"></p>
+        <button class="btns" id="btnValidar">Validar</button>
+      </section>
+    </main>
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
