Funcion isValid funcional en consola

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,17 @@
       <section id="container" >
         <br>
         <h1>Valida tu tarjeta</h1>
-        <input type="text" id="numero" maxlength="16" placeholder="Número de Tarjeta">
-        <p id="textoAlert" class="ocultar"></p>
-        <button class="btns" id="btnValidar">Validar</button>
+        <input type="text" id="cardNumber" maxlength="16" placeholder="Número de Tarjeta">
+        <p id="textAlert" class="hide"></p>
+        <p></p>
+        <button class="btns" id="btnValid">Validar</button>
+      </section>
+      <section id="containerResult" class="hide">
+        huikjnhui
+            <h1 id="message"></h1>
+            <h2 id="numberMaskify"></h2>
+            <button class="btns">Regresar</button>
+        </section>
       </section>
     </main>
     <footer></footer>
